--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,11 @@
 	</parent>
 
 	<groupId>com.coople</groupId>
-	<artifactId>gamePartnerService</artifactId>
+	<artifactId>coople_scheduler_api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>gamePartnerService</name>
+	<name>coople_scheduler_api</name>
 
-	<description>Game Partner Service</description>
+	<description>coople_scheduler_api</description>
 
 	<properties>
 		<java.version>17</java.version>
@@ -54,6 +54,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>com.auth0</groupId>
@@ -88,5 +89,23 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<profiles>
+		<profile>
+			<id>dev</id>
+			<properties>
+				<activatedProperties>dev</activatedProperties>
+			</properties>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+		</profile>
+		<profile>
+			<id>prod</id>
+			<properties>
+				<activatedProperties>prod</activatedProperties>
+			</properties>
+		</profile>
+	</profiles>
 
 </project>
